Fix bug with shift key, remove range input outline on focus

--- a/src/styles.css
+++ b/src/styles.css
@@ -200,6 +200,7 @@ input[type="range"] {
   appearance: none;
   -webkit-appearance: none;
   background: transparent;
+  outline: none;
 }
 
 /* chrome */
